<resources>
    <string name="app_name">Fitness Tracker</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDsyerfgeRuWsEhRMUiR2tQi6Iqcd-dEVs</string>
    <string-array name="actvity_level_choice">
        <item>Sedentary - Little/no exercise</item>
        <item>Lightly active - Light exercise/sports 1-3 days/week</item>
        <item>Moderately active - Moderate exercise/sports 3-5 days/wk)</item>
        <item>Very active - Hard exercise/sports 6-7 days a week</item>
        <item>Extra active - Very active &amp; physical job)</item>
    </string-array>
    <string name="choose_activity"><u>click here to choose your activity level</u></string>
    <string name="male" translatable="false">MALE</string>
    <string name="female" translatable="false">FEMALE</string>
    <string name="bmr_result">Your BMR is %s (calories a day needed to keep your body functioning at rest)\n\nCalories needed are %s (calories a day to maintain body weight)</string>
    <string name="welcome_message">Welcome!\n\nPlease enter your name and weight to continue.</string>
    <string name="your_name_hint">Your name</string>
    <string name="your_weight_in_pounds_hint">Your weight in pounds</string>
    <string name="continue_text">Continue</string>
    <string name="sort_by">Sort by:</string>
    <string name="start_running">Start running to see your runs listed here</string>
    <string name="init_time">00:00:00</string>
    <string name="init_distance">0 km</string>
    <string name="total_distance_label">Total Distance</string>
    <string name="total_time_label">Total Time</string>
    <string name="init_avg_speed">0 km/h</string>
    <string name="init_calories">0 kcal</string>
    <string name="average_speed_label">Average Speed</string>
    <string name="total_calories_label">Total Calories Burned</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="about_bmr">Basal Metabolic Rate is the number of calories required to keep your body functioning at rest. BMR is also known as your body’s metabolism; therefore, any increase to your metabolic weight, such as exercise, will increase your BMR.</string>
    <string name="calculate_your_bmr">Calculate your BMR</string>
    <string name="your_age">Your Age</string>
    <string name="your_height_in_inches_hint">Your height in inches</string>
    <string name="calculate">calculate</string>
    <string name="about_bmi">BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.\nBMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25. A score below 20 indicates that you may be underweight; a value above 25 indicates that you may be overweight.</string>
    <string name="calculate_your_bmi">Calculate your BMI</string>
    <string name="init_timer_with_millis">00:00:00:00</string>
    <string name="finish_run">Finish Run</string>
    <string name="your_runs">Your Runs</string>
    <string name="your_bmr">Your BMR</string>
    <string name="your_bmi">Your BMI</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="cancel_run">Cancel run</string>
    <string name="run_save_success">Run saved successfully.</string>
    <string name="avg_speed_over_time_label">Avg Speed over Time</string>
    <string name="please_enter_all_fields">Please enter all the fields.</string>
    <string name="changes_applied_successfully">Changes applied successfully</string>
    <string name="accept_locations">You need to accept location permissions to use this app.</string>
    <string name="cancel_run_title">Cancel the Run?</string>
    <string name="cancel_run_message">Are you sure that you want to cancel the current run and delete its data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_activity_level">Choose your Activity Level</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="total_distance">%s km</string>
    <string name="total_avg_speed">%s km/h</string>
    <string name="total_calories">%s kcal</string>
    <string name="lets_go">Let\'s go, %s!</string>
    <string name="success_delete">Successfully deleted run</string>
    <string name="undo">Undo</string>
    <string name="data_format">dd.MM.yy</string>
    <string name="date">Date: %s</string>
    <string name="speed">Speed: %s</string>
    <string name="distance">Distance: %s</string>
    <string name="calories">Calories: %s</string>
    <string name="time">Time: %s</string>
    <string name="dear_user">Dear %s</string>
    <string name="bmi_underweight">Your BMI is equal to or less than 18.5 (Underweight)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="bmi_normal_weight">Your BMI is between 18.5-24.9 (Normal Weight)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="bmi_over_weight">Your BMI is between 25 - 29.9 (Overweight)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="bmi_obese_class_one">Your BMI is between 30 - 34.99 (Obese Class 1)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="bmi_obese_class_two">Your BMI is between 35 - 39.99 (Obese Class 2)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="bmi_obese_class_three">Your BMI is over 40 (Obese Class 3 : Morbid Obesity)\n\nSource: https://www.bmi-calculator.net</string>
    <string name="your_bmi_result">You have a BMI of %s.%s</string>


</resources>
