<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp">

        <TextView
            android:id="@+id/aboutBMRTextView"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:text="@string/about_bmr"
            android:textColor="@android:color/black"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/calculateBMRTextView"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/calculate_your_bmr"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutBMRTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateBMRTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageInputEditText"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@integer/ems_width"
                android:hint="@string/your_age"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageID">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightInputEditText"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@integer/ems_width"
                android:hint="@string/your_weight_in_pounds_hint"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightInputId"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@integer/ems_width"
                android:hint="@string/your_height_in_inches_hint"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/radioGroupId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightInputLayout">

            <RadioButton
                android:id="@+id/maleRadioButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorAccent"
                android:checked="false"
                android:tag="@string/male"
                android:text="@string/male"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/femaleRadioButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:buttonTint="@color/colorAccent"
                android:checked="false"
                android:tag="@string/female"
                android:text="@string/female"
                android:textColor="@android:color/black" />


        </RadioGroup>

        <TextView
            android:id="@+id/activityLevelId"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/choose_activity"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupId" />

        <Button
            android:id="@+id/calculateButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/calculate"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityLevelId" />

        <TextView
            android:id="@+id/viewBMRResultId"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:textColor="@android:color/black"
            android:visibility="invisible"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButtonId"
            tools:text="Your BMR score is 2385 calories" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>